gateway-yamls/route/traefik/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: service1-route
  namespace: default
spec:
  parentRefs:
  - name: sad-kistpay-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /service1
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
          X-RateLimit-Limit: "20"
    forwardTo:
    - serviceName: service1
      port: 80
